// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LowerOutOfBounds story snapshot 1`] = `
.emotion-0 {
  box-sizing: border-box;
  gap: 16px 16px;
  width: 50vw;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 100%;
  height: 16px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  width: 100%;
  height: 8px;
  border-radius: 8px;
  background-color: var(--pbl-theme-colors-gray-100);
}

.emotion-3 {
  position: absolute;
  height: 10px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  border-radius: 10px;
  background-color: var(--pbl-theme-colors-brand-main);
}

.emotion-4 {
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: var(--pbl-theme-colors-common-white);
  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2),0px 4px 10px rgba(0, 0, 0, 0.1);
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%) translateX(-50%);
  -moz-transform: translateY(-50%) translateX(-50%);
  -ms-transform: translateY(-50%) translateX(-50%);
  transform: translateY(-50%) translateX(-50%);
  cursor: -webkit-grab;
  cursor: grab;
  border: 1px solid var(--pbl-theme-colors-gray-100);
}

.emotion-5 {
  box-sizing: border-box;
  width: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-paragraph-fontSize);
  line-height: var(--pbl-theme-typography-paragraph-lineHeight);
  margin-bottom: 0;
}

<div
  class="emotion-0"
  width="50vw"
>
  <div
    class="emotion-1"
    role="slider"
  >
    <div
      class="emotion-2"
      data-testid="slider-rail"
    />
    <div
      class="emotion-3"
      data-testid="slider-track"
      style="width: 0%;"
    />
    <div
      class="emotion-4"
      data-testid="slider-thumb"
      style="left: 0%;"
    />
  </div>
  <div
    class="emotion-5"
    width="50"
  >
    <p
      class="emotion-6"
    >
      50
    </p>
  </div>
</div>
`;

exports[`OffsetRangeSlider story snapshot 1`] = `
.emotion-0 {
  box-sizing: border-box;
  gap: 16px 16px;
  width: 50vw;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 100%;
  height: 16px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  width: 100%;
  height: 8px;
  border-radius: 8px;
  background-color: var(--pbl-theme-colors-gray-100);
}

.emotion-3 {
  position: absolute;
  height: 10px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  border-radius: 10px;
  background-color: var(--pbl-theme-colors-brand-main);
}

.emotion-4 {
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: var(--pbl-theme-colors-common-white);
  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2),0px 4px 10px rgba(0, 0, 0, 0.1);
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%) translateX(-50%);
  -moz-transform: translateY(-50%) translateX(-50%);
  -ms-transform: translateY(-50%) translateX(-50%);
  transform: translateY(-50%) translateX(-50%);
  cursor: -webkit-grab;
  cursor: grab;
  border: 1px solid var(--pbl-theme-colors-gray-100);
}

.emotion-5 {
  box-sizing: border-box;
  width: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-paragraph-fontSize);
  line-height: var(--pbl-theme-typography-paragraph-lineHeight);
  margin-bottom: 0;
}

<div
  class="emotion-0"
  width="50vw"
>
  <div
    class="emotion-1"
    role="slider"
  >
    <div
      class="emotion-2"
      data-testid="slider-rail"
    />
    <div
      class="emotion-3"
      data-testid="slider-track"
      style="width: 16.77018633540373%;"
    />
    <div
      class="emotion-4"
      data-testid="slider-thumb"
      style="left: 16.77018633540373%;"
    />
  </div>
  <div
    class="emotion-5"
    width="50"
  >
    <p
      class="emotion-6"
    >
      50
    </p>
  </div>
</div>
`;

exports[`SimpleSlider story snapshot 1`] = `
.emotion-0 {
  box-sizing: border-box;
  gap: 16px 16px;
  width: 50vw;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 100%;
  height: 16px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  width: 100%;
  height: 8px;
  border-radius: 8px;
  background-color: var(--pbl-theme-colors-gray-100);
}

.emotion-3 {
  position: absolute;
  height: 10px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  border-radius: 10px;
  background-color: var(--pbl-theme-colors-brand-main);
}

.emotion-4 {
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: var(--pbl-theme-colors-common-white);
  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2),0px 4px 10px rgba(0, 0, 0, 0.1);
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%) translateX(-50%);
  -moz-transform: translateY(-50%) translateX(-50%);
  -ms-transform: translateY(-50%) translateX(-50%);
  transform: translateY(-50%) translateX(-50%);
  cursor: -webkit-grab;
  cursor: grab;
  border: 1px solid var(--pbl-theme-colors-gray-100);
}

.emotion-5 {
  box-sizing: border-box;
  width: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-paragraph-fontSize);
  line-height: var(--pbl-theme-typography-paragraph-lineHeight);
  margin-bottom: 0;
}

<div
  class="emotion-0"
  width="50vw"
>
  <div
    class="emotion-1"
    role="slider"
  >
    <div
      class="emotion-2"
      data-testid="slider-rail"
    />
    <div
      class="emotion-3"
      data-testid="slider-track"
      style="width: 50%;"
    />
    <div
      class="emotion-4"
      data-testid="slider-thumb"
      style="left: 50%;"
    />
  </div>
  <div
    class="emotion-5"
    width="50"
  >
    <p
      class="emotion-6"
    >
      50
    </p>
  </div>
</div>
`;

exports[`UpperOutOfBounds story snapshot 1`] = `
.emotion-0 {
  box-sizing: border-box;
  gap: 16px 16px;
  width: 50vw;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 100%;
  height: 16px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  width: 100%;
  height: 8px;
  border-radius: 8px;
  background-color: var(--pbl-theme-colors-gray-100);
}

.emotion-3 {
  position: absolute;
  height: 10px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  border-radius: 10px;
  background-color: var(--pbl-theme-colors-brand-main);
}

.emotion-4 {
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: var(--pbl-theme-colors-common-white);
  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2),0px 4px 10px rgba(0, 0, 0, 0.1);
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%) translateX(-50%);
  -moz-transform: translateY(-50%) translateX(-50%);
  -ms-transform: translateY(-50%) translateX(-50%);
  transform: translateY(-50%) translateX(-50%);
  cursor: -webkit-grab;
  cursor: grab;
  border: 1px solid var(--pbl-theme-colors-gray-100);
}

.emotion-5 {
  box-sizing: border-box;
  width: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-paragraph-fontSize);
  line-height: var(--pbl-theme-typography-paragraph-lineHeight);
  margin-bottom: 0;
}

<div
  class="emotion-0"
  width="50vw"
>
  <div
    class="emotion-1"
    role="slider"
  >
    <div
      class="emotion-2"
      data-testid="slider-rail"
    />
    <div
      class="emotion-3"
      data-testid="slider-track"
      style="width: 100%;"
    />
    <div
      class="emotion-4"
      data-testid="slider-thumb"
      style="left: 100%;"
    />
  </div>
  <div
    class="emotion-5"
    width="50"
  >
    <p
      class="emotion-6"
    >
      50
    </p>
  </div>
</div>
`;
